<resources>
    <string name="app_name">Chemical sensing</string>
    <string name="no_devices_found">No device(s) found</string>
    <string name="scan_button_text">Scan for chemical sensing devices</string>
    <string name="no_temperature_board">No temperature board connected</string>
    <string name="no_potentiometric_board">No potentiometric board connected</string>
    <string name="no_data">No data</string>
    <string name="device_unreachable">Device is not available</string>
    <string name="calculating_resistance">Calculating\nresistance</string>
    <string name="board_disconnected">Board\n disconnected</string>
    <string name="waiting_for_resistance">Waiting for\n resistance</string>
    <string name="resistance_x_axis">Resistance (MΩ)</string>
    <string name="temperature_y_axis">Temperature (°C)</string>
    <string name="pH_y_axis">pH Value</string>
    <string name="calculating_temperature">Calculating\ntemperature</string>
    <string name="x_axis_label">Time (s)</string>
    <string name="start_sampling">Start data saving</string>
    <string name="stop_sampling">Stop data saving</string>
    <string name="welcome_info_text">Welcome to the chemical sensing application.\nPress the button to scan for chemical sensing devices.</string>
    <string name="calibrate_sensor">Calibrate</string>
    <string name="calibration_info">Enter the potential (in mV) corresponding to each pH value. Click calibrate to calculate your new linear regression formula.</string>
    <string name="ph_4">pH value 1</string>
    <string name="ph_7">pH value 2</string>
    <string name="ph_10">pH value 3</string>
    <string name="calibrate">Calibrate</string>
    <string name="ready_to_calibrate">Ready to calibrate</string>
    <string name="temp_calibration_info">Enter the temperature (in °C) and resistance (in kΩ) and click calibrate to get your new linear regression formula.</string>
    <string name="temp_1">Temp 1</string>
    <string name="resistance_1">Resistance 1</string>
    <string name="temp_2">Temp 2</string>
    <string name="resistance_2">Resistance 2</string>
    <string name="temp_3">Temp 3</string>
    <string name="resistance_3">Resistance 3</string>
    <string name="temp_4">Temp 4</string>
    <string name="resistance_4">Resistance 4</string>
    <string name="temp_5">Temp 5</string>
    <string name="resistance_5">Resistance 5</string>
    <string name="potential_value_1">Potential value 1</string>
    <string name="potential_value_2">Potential value 2</string>
    <string name="potential_value_3">Potential value 3</string>
    <string name="pause_data_saving">Pause data saving</string>
    <string name="continue_data_saving">Continue data saving</string>
    <string name="no_multichannel_board_connected">No multichannel board connected</string>
    <string name="we1">WE1:</string>
    <string name="we2">WE2:</string>
    <string name="we3">WE3:</string>
    <string name="we4">WE4:</string>
    <string name="we5">WE5:</string>
    <string name="we6">WE6:</string>
    <string name="we7">WE7:</string>
    <string name="not_active">Not active</string>
    <string name="no_of_channels"># channels</string>
    <string name="set">Set</string>
    <string name="multichannel_y_axis_text">Potential (mV)</string>
    <string name="no_potentiometer_rtd_board_connected">No Potentiometer/RTD board connected</string>
    <string name="time_s">Time (s)</string>
    <string name="potential_mv">Potential (mV)</string>
    <string name="save_data">Save data</string>
    <string name="open_calibration">Open calibration</string>
    <string name="set_channels">Set channels</string>
</resources>
